--- a/explorer_intres.rc
+++ b/explorer_intres.rc
@@ -180,6 +180,7 @@ IDI_ADMIN               ICON                    "res/administration.ico"
 IDI_RECENT              ICON                    "res/recent-documents.ico"
 IDI_EMPTY               ICON                    "res/empty.ico"
 IDI_EMPTY2              ICON                    "res/empty.ico"
+IDI_CMD24              ICON                     "res/cmd24.ico"
 IDI_TRAY_SND_NONE       ICON                    "res/snd_none.ico"
 IDI_TRAY_SND_MUTE       ICON                    "res/snd_mute.ico"
 IDI_TRAY_SND_SMALL      ICON                    "res/snd_s.ico"
