--- a/WinXShell_VS2015.vcxproj.filters
+++ b/WinXShell_VS2015.vcxproj.filters
@@ -157,6 +157,9 @@
     <ClCompile Include="features\brightnesslayer.cpp">
       <Filter>features</Filter>
     </ClCompile>
+    <ClCompile Include="utility\Dialog.cpp">
+      <Filter>utility</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="resource.h" />
@@ -298,6 +301,9 @@
     </ClInclude>
     <ClInclude Include="systemsettings\DesktopCommand.h">
       <Filter>systemsettings</Filter>
+    </ClInclude>
+    <ClInclude Include="utility\Dialog.h">
+      <Filter>utility</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
