--- a/WinXShell_VS2015.vcxproj.filters
+++ b/WinXShell_VS2015.vcxproj.filters
@@ -343,6 +343,8 @@
     <ResourceCompile Include="explorer_intres.rc" />
     <ResourceCompile Include="explorer-en.rc" />
     <ResourceCompile Include="explorer-zh.rc" />
+    <ResourceCompile Include="explorer-ja.rc" />
+    <ResourceCompile Include="explorer-ru.rc" />
   </ItemGroup>
   <ItemGroup>
     <Image Include="res\action.ico">
