update resource files

--- a/explorer.rc
+++ b/explorer.rc
@@ -1,14 +1,9 @@
 #include "explorer_intres.rc"
 
-LANGUAGE LANG_ENGLISH, SUBLANG_ENGLISH_US
-
-#define IDS_VERSION_STR             5000
-#define IDS_EXPLORER_VERSION_STR    5001
-
 LANGUAGE LANG_NEUTRAL, SUBLANG_NEUTRAL
 
 STRINGTABLE DISCARDABLE
 BEGIN
-    IDS_VERSION_STR REACTOS_STR_PRODUCT_VERSION
-    IDS_EXPLORER_VERSION_STR "PExlorer %0s"
+    IDS_VERSION_STR PRODUCT_VERSION_STR
+    IDS_EXPLORER_VERSION_STR "WinXShell %0s"
 END
